# scaip-gateway

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scripts.py
scaip_gateway/: api.py  config.py  spec.py
scaip_gateway/sip/: application.py
scaip_gateway/xml/: __init__.py  scaip.py
