[tool.poetry]
name = "scaip-gateway"
version = "0.1.0"
description = ""
authors = ["CARU AG <technology@caruhome.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
python3-application = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-application-3.0.2.tar.gz"}
python3-eventlib = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-eventlib-0.3.0.tar.gz"}
python3-gnutls = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-gnutls-3.1.7.tar.gz"}
python3-otr = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-otr-3.0.0.tar.gz"}
python3-msrplib = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-msrplib-0.21.0.tar.gz"}
python3-xcaplib = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-xcaplib-2.0.0.tar.gz"}
Cython = "^0.29.22"
python3-sipsimple = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-sipsimple-4.0.0.tar.gz"}
greenlet = "^1.0.0"
dnspython = "^2.1.0"
lxml = "^4.6.3"
python-dateutil = "^2.8.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"
xsdata = {extras = ["cli"], version = "^21.4"}
dataclass-factory = "2.10.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server-dev = "scripts:server_dev"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
