[tool.poetry]
name = "scaip-gateway"
version = "0.2.5"
description = ""
authors = ["CARU AG <technology@caruhome.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
python3-application = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-application-3.0.3.tar.gz"}
python3-eventlib = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-eventlib-0.3.0.tar.gz"}
python3-gnutls = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-gnutls-3.1.7.tar.gz"}
python3-otr = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-otr-3.0.0.tar.gz"}
python3-msrplib = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-msrplib-0.21.1.tar.gz"}
python3-xcaplib = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-xcaplib-2.0.0.tar.gz"}
Cython = "*"
python3-sipsimple = {url = "http://download.ag-projects.com/SipSimpleSDK/Python3/python3-sipsimple-5.2.2.tar.gz"}
greenlet = "*"
dnspython = "*"
lxml = "*"
python-dateutil = "*"
fastapi = "*"
uvicorn = "*"
xsdata = {extras = ["cli"], version = "*"}
dataclass-factory = "*"
boto3 = "*"
twisted = "*"
"zope.interface" = "*"
requests = "*"
gevent = "*"
ursine = "^0.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server-dev = "scripts:server_dev"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
