[tool.poetry]
name = "scaip-gateway"
version = "0.4.0"
description = ""
authors = ["CARU AG <technology@caruhome.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "*"
uvicorn = "*"
xsdata = {extras = ["cli"], version = "*"}
dataclass-factory = "*"
boto3 = "*"
requests = "*"
ursine = "^0.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
server-dev = "scaip_gateway.scripts:server_dev"

[build-system]
requires = ["poetry-core>=1.0.0", "Cython"]
build-backend = "poetry.core.masonry.api"
